// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeIcon when in classic theme when rendered should match the snapshot for default 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #335c6d;
}

.c0 span:before {
  color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when rendered should match the snapshot for error 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C7384F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #c7384f;
}

.c0 span:before {
  color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when rendered should match the snapshot for help 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #ffab00;
}

.c0 span:before {
  color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when rendered should match the snapshot for info 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #0073C2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #1573e6;
}

.c0 span:before {
  color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when rendered should match the snapshot for maintenance 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #ff7d00;
}

.c0 span:before {
  color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when rendered should match the snapshot for new 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #639;
}

.c0 span:before {
  color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when rendered should match the snapshot for success 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #00B000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #50b848;
}

.c0 span:before {
  color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when rendered should match the snapshot for warning 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFB500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #ff7d00;
}

.c0 span:before {
  color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when transparent prop is set to true applies white background and the type icon with the proper style applied for default 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  background-color: transparent;
  border-radius: 3px 0 0 3px;
  background-color: #335c6d;
  background-color: transparent;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #335c6d;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when transparent prop is set to true applies white background and the type icon with the proper style applied for error 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C7384F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  background-color: transparent;
  border-radius: 3px 0 0 3px;
  background-color: #c7384f;
  background-color: transparent;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #C7384F;
}

.c0 span:before {
  color: #c7384f;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when transparent prop is set to true applies white background and the type icon with the proper style applied for help 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  background-color: transparent;
  border-radius: 3px 0 0 3px;
  background-color: #ffab00;
  background-color: transparent;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #ffab00;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when transparent prop is set to true applies white background and the type icon with the proper style applied for info 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #0073C2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  background-color: transparent;
  border-radius: 3px 0 0 3px;
  background-color: #1573e6;
  background-color: transparent;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #0073C2;
}

.c0 span:before {
  color: #1573e6;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when transparent prop is set to true applies white background and the type icon with the proper style applied for maintenance 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  background-color: transparent;
  border-radius: 3px 0 0 3px;
  background-color: #ff7d00;
  background-color: transparent;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #ff7d00;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when transparent prop is set to true applies white background and the type icon with the proper style applied for new 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  background-color: transparent;
  border-radius: 3px 0 0 3px;
  background-color: #639;
  background-color: transparent;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #639;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when transparent prop is set to true applies white background and the type icon with the proper style applied for success 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #00B000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  background-color: transparent;
  border-radius: 3px 0 0 3px;
  background-color: #50b848;
  background-color: transparent;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #00B000;
}

.c0 span:before {
  color: #50b848;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when in classic theme when transparent prop is set to true applies white background and the type icon with the proper style applied for warning 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFB500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  background-color: transparent;
  border-radius: 3px 0 0 3px;
  background-color: #ff7d00;
  background-color: transparent;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #FFB500;
}

.c0 span:before {
  color: #ff7d00;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when rendered with no additional props should match the snapshot for error 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C7384F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
}

.c0 span:before {
  color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when rendered with no additional props should match the snapshot for info 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #0073C2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
}

.c0 span:before {
  color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when rendered with no additional props should match the snapshot for success 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #00B000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
}

.c0 span:before {
  color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when rendered with no additional props should match the snapshot for warning 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E96400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
}

.c0 span:before {
  color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when transparent prop is set to true applies white background and the type icon with the proper style applied 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #0073C2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  background-color: transparent;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #0073C2;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when transparent prop is set to true applies white background and the type icon with the proper style applied 2`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C7384F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  background-color: transparent;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #C7384F;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when transparent prop is set to true applies white background and the type icon with the proper style applied 3`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #00B000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  background-color: transparent;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #00B000;
}

<div
  className="c0"
/>
`;

exports[`TypeIcon when transparent prop is set to true applies white background and the type icon with the proper style applied 4`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E96400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 100%;
  min-width: 30px;
  text-align: center;
  background-color: transparent;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #E96400;
}

<div
  className="c0"
/>
`;
